--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,99 @@
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+:root {
+  /* Colors */
+  --color-primary: #4d4d4e;
+  --color-white: #fff;
+  --color-black: #000;
+  --color-gray: #7a7a7a;
+
+  --text: var(--color-gray);
+  --text-white: var(--color-white);
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  color: var(--text);
+}
+
+/* Global */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Header */
+.header {
+  width: 100%;
+  padding: 7px 0;
+  background-color: var(--color-primary);
+}
+
+.header__grid {
+  display: grid;
+  grid-template-columns: 90px 1fr 1fr 50px;
+  column-gap: 40px;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  column-gap: 40px;
+}
+
+.menu__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.submenu {
+  position: absolute;
+  bottom: -74px;
+  left: 0;
+  width: max-content;
+  padding: 20px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.4s ease;
+  background-color: var(--color-primary);
+}
+
+.submenu.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.submenu a {
+  color: var(--text-white);
+}
+
+.menu__item-link {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: var(--text-white);
+}
+
+.menu__item-link .icon {
+  display: block;
+  width: 30px;
+  height: 29px;
+}
+
+.cart {
+  width: 35px;
+}
+
+.cart a {
+  display: block;
 }
