--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,10 @@ img {
   height: auto;
 }
 
+figure {
+  display: flex;
+}
+
 /* Header */
 .header {
   width: 100%;
@@ -142,6 +146,7 @@ img {
 @media only screen and (min-width: 1024px) {
   .section-hero {
     padding: 50px 0 0 0;
+    aspect-ratio: inherit;
   }
 
   .section-hero .desktop {
@@ -151,4 +156,35 @@ img {
   .section-hero .mobile {
     display: none;
   }
+}
+
+/* Title */
+.section-title {
+  padding: 50px 0;
+  text-align: center;
+}
+
+/* Featured Products */
+.section-featured-products__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 10px;
+}
+
+.section-featured-products__grid li {
+  list-style-type: none;
+}
+
+.section-featured-products__grid figure {
+  padding: 20px;
+  box-shadow: 0 2px 40px 0 rgba(0,0,0,0.07);
+}
+
+.section-featured-products__grid a {
+  color: inherit;
+}
+
+.section-featured-products__grid a p {
+  text-align: center;
+  padding: 10px;
 }
