--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,10 @@
 
   --text: var(--color-gray);
   --text-white: var(--color-white);
+  --text-black: var(--color-black);
+
+  --bckg-black: var(--color-black);
+  --bckg-primary: var(--color-primary);
 }
 
 .body {
@@ -304,4 +308,81 @@ figure {
   .section-featured-products__grid a p {
     font-size: 16px;
   }
+}
+
+/* Footer */
+.footer {
+  padding: 50px 0 0;
+  border-top: 1px solid #4e4d4d14;
+}
+
+.footer__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 50px;
+  padding-bottom: 50px;
+}
+
+.footer__location {
+  display: grid;
+  row-gap: 20px;
+  color: var(--text-black);
+}
+
+.footer__location p {
+  font: 400 normal 16px/1.4 "Montserrat", sans-serif;
+}
+
+.footer__menu {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.footer__menu h3 {
+  font: 700 normal 16px/1.4 "Montserrat", sans-serif;
+}
+
+.footer__menu a {
+  font: 400 normal 14px/1.4 "Montserrat", sans-serif;
+  color: var(--text-black);
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.footer__menu p {
+  font: 400 normal 14px/1.4 "Montserrat", sans-serif;
+}
+
+.footer__contact {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
+.footer__contact figure {
+  width: 50px;
+}
+
+.footer__contact p,
+.footer__contact a {
+  font: 400 normal 14px/1.4 "Montserrat", sans-serif;
+  color: var(--text-black);
+}
+
+.footer__bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  color: var(--text-white);
+  background-color: var(--bckg-primary);
+}
+
+.footer__payment {
+  justify-content: center;
+  padding: 10px 0;
 }
