--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,6 +109,7 @@ figure {
   visibility: hidden;
   transition: all 0.4s ease;
   background-color: #4e4d4dbf;
+  z-index: 2;
 }
 
 .submenu.active {
